# projects-amnesia

./: .gitignore  Cargo.toml  README.md  run-differential-experiments.sh
datasets/: YearPredictionMSD.libsvm.README
material/: random_projection.txt
results/: cf-1.csv  cf-2.csv  cf-3.csv  cf-4.csv  mnb-1.csv  mnb-2.csv  mnb-4.csv
src/: io_utils.rs  itembased.rs  lib.rs  lsh.rs  main.rs  multinomial_nb.rs  ridge.rs  utils.rs
src/differential/: io_utils.rs  itembased.rs  lsh.rs  mnb.rs  mod.rs
