[package]
name = "amnesia"
version = "0.1.0"
authors = ["sscdotopen <ssc.open@googlemail.com>"]
edition = "2018"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "itembased_experiments"
path = "src/bin/itembased_experiments.rs"

[[bin]]
name = "lsh_experiments"
path = "src/bin/lsh_experiments.rs"

[[bin]]
name = "ridge_experiments"
path = "src/bin/ridge_experiments.rs"


[lib]
path = "src/lib.rs"

[dependencies]
fnv = "1.0"
rand="0.6"
ndarray = "0.12"
ndarray-rand = "0.9"
ndarray-linalg = { version = "0.11", features = ["openblas"] }
csv = "1.1"
GSL = "*"